[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/PlayerBody.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://sprites/riririri.png" type="Texture" id=3]
[ext_resource path="res://sprites/Rifle_Big.png" type="Texture" id=4]
[ext_resource path="res://scripts/gun.gd" type="Script" id=5]
[ext_resource path="res://scenes/Unicorn.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/Player/Player_Walk__0007_3.png" type="Texture" id=7]
[ext_resource path="res://sprites/Player/Player_Walk__0005_1.png" type="Texture" id=8]
[ext_resource path="res://sprites/Player/Player_Walk__0008_4.png" type="Texture" id=9]
[ext_resource path="res://sprites/Player/Player_Walk__0006_2.png" type="Texture" id=10]
[ext_resource path="res://sprites/Player/Player_Walk__0004_Idle.png" type="Texture" id=11]
[ext_resource path="res://fonts/Oswald/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scenes/ScoreLabel.gd" type="Script" id=13]
[ext_resource path="res://scripts/ammo.gd" type="Script" id=14]
[ext_resource path="res://shaders/bounce.shader" type="Shader" id=15]
[ext_resource path="res://scripts/Multiplier.gd" type="Script" id=16]
[ext_resource path="res://sprites/Shotgun_Big.png" type="Texture" id=17]
[ext_resource path="res://sprites/Pistol_Big.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "rifle",
"speed": 1.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "pistol",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "shotgun",
"speed": 1.0
} ]

[sub_resource type="GDScript" id=8]
script/source = "extends AnimatedSprite

onready var spawnPos = $\"../spawnPos\"

func _ready():
	pass

func _process(delta):
	if get_global_mouse_position().y <= global_position.y and get_global_mouse_position().x >= global_position.x:
		flip_v = false
	else:
		if get_global_mouse_position().x <= global_position.x:
			flip_v = true
			
	if get_global_mouse_position().x <= global_position.x:
		spawnPos.position.y = abs(spawnPos.position.y)
	else:
		spawnPos.position.y = -abs(spawnPos.position.y)
"

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 15 )
shader_param/speed = 10.0

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[node name="Player" type="Node2D"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayerBody" type="KinematicBody2D" parent="." groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="PlayerBody"]

[node name="Sprite" type="AnimatedSprite" parent="PlayerBody/YSort"]
scale = Vector2( -0.05, 0.05 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="gun" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="pivot" type="Position2D" parent="gun"]

[node name="Sprite" type="AnimatedSprite" parent="gun/pivot"]
position = Vector2( 32, 0 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )
animation = "pistol"
script = SubResource( 8 )

[node name="spawnPos" type="Position2D" parent="gun/pivot"]
position = Vector2( 80, -5 )

[node name="cooldown" type="Timer" parent="gun"]

[node name="Unicorn" parent="." instance=ExtResource( 6 )]
position = Vector2( 70, 0 )

[node name="Camera2D" type="Camera2D" parent="Unicorn"]
current = true
smoothing_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Health Bar" type="HBoxContainer" parent="UI"]
anchor_left = 0.302509
anchor_top = 0.846809
anchor_right = 2.81813
anchor_bottom = 1.70014
rect_scale = Vector2( 0.15, 0.15 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="UI/Health Bar"]
margin_right = 512.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="UI/Health Bar"]
margin_left = 516.0
margin_right = 1028.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="UI/Health Bar"]
margin_left = 1032.0
margin_right = 1544.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="UI/Health Bar"]
margin_left = 1548.0
margin_right = 2060.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="UI/Health Bar"]
margin_left = 2064.0
margin_right = 2576.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.866667, 0.211765, 0.721569, 1 )
text = "0
"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreTimer" type="Timer" parent="UI/Score"]
autostart = true

[node name="Ammo" type="Label" parent="UI"]
anchor_left = 0.918873
anchor_top = 0.861129
anchor_right = 0.968677
anchor_bottom = 0.986129
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.866667, 0.827451, 0.211765, 1 )
text = "60"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Multiplier" type="Label" parent="UI"]
material = SubResource( 6 )
anchor_left = 0.531884
anchor_top = 0.138304
anchor_right = 0.531884
anchor_bottom = 0.138304
margin_left = -26.0
margin_right = 26.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0235294, 0.952941, 0.756863, 1 )
text = "x3"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}
[connection signal="timeout" from="gun/cooldown" to="gun" method="_on_cooldown_timeout"]
[connection signal="timeout" from="UI/Score/scoreTimer" to="UI/Score" method="_on_scoreTimer_timeout"]
